# STM32H750XBH6

./: .clangd  .mxproject  CMakeLists.txt  README.MD  STM32H750XBH6.ioc  STM32H750XX_FLASH.ld
.github/: copilot-instructions.md
Core/Inc/: bsp_setup.hpp  main.h  qspi_w25q256.hpp  sdram.hpp  stm32h7xx_hal_conf.h  stm32h7xx_it.h  test.hpp  usart.h
Core/Src/: app.cpp  boot_loader.cpp  bsp_setup.cpp  fmc.c  gpio.c  main.c  qspi_w25q256.cpp  quadspi.c  sdram.cpp  stm32h7xx_it.c  test.cpp  usart.c
cmake/stm32cubemx/: CMakeLists.txt
